Add ebook knowledge QA agent pipeline

--- a/ebook-agent/src/requirements.txt
+++ b/ebook-agent/src/requirements.txt
@@ -4,3 +4,7 @@ qdrant-client>=1.7.0
 openai>=1.0.0
 rich>=13.0.0
 python-dotenv>=1.0.0
+pdfplumber>=0.11.0
+ebooklib>=0.18
+beautifulsoup4>=4.12.0
+PyYAML>=6.0.0
