--- a/ebook-agent/src/config/settings.yaml
+++ b/ebook-agent/src/config/settings.yaml
@@ -1,9 +1,9 @@
-books_dir: "./data/books"
+books_dir: "../ebooks"
 qdrant_url: "http://localhost:6333"
 qdrant_api_key: null
 collection_name: "book_chunks"
-embedding_model: "text-embedding-3-large"
-llm_model: "gpt-4o-mini"
+embedding_model: "text-embedding-004"
+llm_model: "gemini-2.5-flash"
 chunk_size: 900
 chunk_overlap: 120
 top_k: 6
