--- a/ebook-agent/src/requirements.txt
+++ b/ebook-agent/src/requirements.txt
@@ -1,7 +1,7 @@
 llama-index>=0.10.0
 llama-index-vector-stores-qdrant>=0.2.0
 qdrant-client>=1.7.0
-openai>=1.0.0
+google-genai>=0.3.0
 rich>=13.0.0
 python-dotenv>=1.0.0
 pdfplumber>=0.11.0
